--- a/style.css
+++ b/style.css
@@ -4,23 +4,31 @@ html {
 }
 
 body {
+    margin: 0px;
+    padding: 0px 0px;
+    display: flex;
+    justify-content: center;
+}
+
+.content-container {
     display: flex;
     flex-direction: column;
-    margin: 0px 250px;
+    margin: 0px;
+    padding: 0px;
+    width: 1440px;
 }
 
 .header,
 .footer {
     background-color: #1F2937;
     display: flex;
-    flex-direction: column;
-    
-    padding: 0px 300px;
-    gap: 50px;
+    flex-direction: column;    
+    padding: 0px 200px;
+    gap: 120px 0px;
 }
 
 .header {
-    height: 350px;
+    height: 535px;
 }
 
 .navbar {
@@ -35,41 +43,48 @@ body {
     font-weight: bold;
 }
 
-.hero {
+.intro {
     display: flex;
-    flex-direction: column;
-    width: 418px;
-    height: 190px;
-    flex: none;
+    margin: 0px;
+}
+
+.hero,
+.image {
+    height: 235px;
+    flex: 1;
+}
+
+.hero {
+    min-width: 400px;
 }
 
 .hero-title {
     font-size: 48px;
     color: #f9faf8;
     font-weight: 900;
+    flex: 0;
 }
 
 .hero-content {
+    font-weight: 300;
     color: #E5E7EB;
     font-size: 18px;
+    padding: 0px 65px 0px 0px;
+    flex: 0;
 }
 
 button {
     width: 100px;
-    height: 100px;
+    height: 30px;
     color: white;
     background-color: #3882f6;
     border-radius: 5px;
+    flex: 1 1 none;
 }
 
 img {
-    display: flex;
-    flex-direction: flex-end;
-}
-
-.intro {
-    display: flex;
-    margin: 0px;
+    height: 100%;
+    
 }
 
 a {
@@ -81,14 +96,16 @@ ul {
     padding: 0px;
     margin: 0px;
     color: white;
+    flex: 1;
     display: flex;
     justify-content: flex-end;
 }
 
 li {
-    margin: 0px 10px;
+    margin: 0px 0px 0px 10px;
     padding: 0px;
     flex: none;
+    align-content: center;
 }
 
 .content {
