--- a/style.css
+++ b/style.css
@@ -24,11 +24,12 @@ body {
     display: flex;
     flex-direction: column;    
     padding: 0px 200px;
-    gap: 120px 0px;
+    gap: 20% 0px;
 }
 
-.header {
-    height: 535px;
+.header,
+.content {
+    height: 480px;
 }
 
 .navbar {
@@ -80,11 +81,11 @@ button {
     background-color: #3882f6;
     border-radius: 5px;
     flex: 1 1 none;
+    margin: 5px 0px;
 }
 
 img {
-    height: 100%;
-    
+    height: 100%;   
 }
 
 a {
@@ -102,7 +103,7 @@ ul {
 }
 
 li {
-    margin: 0px 0px 0px 10px;
+    margin: 0px 0px 0px 25px;
     padding: 0px;
     flex: none;
     align-content: center;
@@ -111,5 +112,48 @@ li {
 .content {
     display: flex;
     flex-direction: column;
-    background-color: #3882f6;
+    background-color: white;
+    align-items: center;
+}
+
+.information-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.card-container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+    align-items: space-between;
+}
+
+.card-item {
+    width: 150px;
+}
+
+.card-img {
+    border: 1px solid blue;
+    border-radius: 10px;
+    height: 150px;
+    width: auto;
+}
+
+.card-content {
+    text-align: center;
+}
+
+.quote {
+    height: 380px;
+    background-color: lightgray;
+}
+
+.sign-up-call-out {
+    height: 320px;
+    background-color: white;
+}
+
+.footer {
+    height: 80px;
 }
