--- a/style.css
+++ b/style.css
@@ -113,20 +113,21 @@ li {
     display: flex;
     flex-direction: column;
     background-color: white;
-    align-items: center;
 }
 
 .information-header {
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+    text-align: center;
+    margin: 50px 0px;
 }
 
 .card-container {
     display: flex;
     flex-direction: row;
-    margin-top: 50px;
-    align-items: space-between;
+    justify-content: center;
+    gap: 50px;
 }
 
 .card-item {
@@ -134,7 +135,7 @@ li {
 }
 
 .card-img {
-    border: 1px solid blue;
+    border: 3px solid blue;
     border-radius: 10px;
     height: 150px;
     width: auto;
@@ -144,16 +145,75 @@ li {
     text-align: center;
 }
 
-.quote {
+.quote-container {
     height: 380px;
-    background-color: lightgray;
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px 315px;
+    color: #1F2937;
+}
+
+.quote-content {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.quote-author {
+    text-align: right;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .sign-up-call-out {
     height: 320px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 100px;
+}
+
+.call-to-action {
+    background-color: #3882f6;
+    border-radius: 10px;
+    width: 1000px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 130px;
+}
+
+.CTA-left,
+.CTA-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    font-size: 18px;;
+}
+
+.CTAL-Title {
+    font-weight: 500;
+}
+
+.CTAL-Content {
+    font-weight: 100;
+}
+
+.CTA-right button {
+    border-color: white;
+    border-width: 2px;
+    border-radius: 7px;
 }
 
 .footer {
     height: 80px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
